--- a/start.html
+++ b/start.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>
-      Roblox Help
+      Roblox
     </title>
+    <link href="roblox.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   </body>
