--- a/start.html
+++ b/start.html
@@ -6,5 +6,7 @@
     <link href="roblox.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="nav">
+    </div>
   </body>
 </html>
