--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="nav">
-      <img src="pics/robloxLogo.png" />
+      <img src="pics/robloxLogo.png" height="15%" />
     </div>
   </body>
 </html>
